src/flutter_recorder.h

FFI_PLUGIN_EXPORT void flutter_recorder_createWorkerInWasm();
FFI_PLUGIN_EXPORT void flutter_recorder_setDartEventCallback(
    dartSilenceChangedCallback_t silence_changed_callback,
    dartStreamDataCallback_t stream_data_callback);
// Set callback for when recording stops (auto-stop at loop boundary)
FFI_PLUGIN_EXPORT void flutter_recorder_setRecordingStoppedCallback(
    dartRecordingStoppedCallback_t callback);
// Set callback for when recording starts (native scheduler fires StartRecording)
FFI_PLUGIN_EXPORT void flutter_recorder_setRecordingStartedCallback(
    dartRecordingStartedCallback_t callback);
FFI_PLUGIN_EXPORT void flutter_recorder_nativeFree(void *pointer);
FFI_PLUGIN_EXPORT void flutter_recorder_listCaptureDevices(char **devicesName,
                                                           int **deviceId,
                                                           int **isDefault,
                                                           int *n_devices);
FFI_PLUGIN_EXPORT void
flutter_recorder_freeListCaptureDevices(char **devicesName, int **deviceId,
                                        int **isDefault, int n_devices);
FFI_PLUGIN_EXPORT enum CaptureErrors
flutter_recorder_init(int deviceID, int pcmFormat, unsigned int sampleRate,
                      unsigned int channels, int captureOnly);
FFI_PLUGIN_EXPORT void flutter_recorder_deinit();
FFI_PLUGIN_EXPORT int flutter_recorder_isInited();
FFI_PLUGIN_EXPORT int flutter_recorder_isDeviceStarted();
FFI_PLUGIN_EXPORT enum CaptureErrors flutter_recorder_start();
FFI_PLUGIN_EXPORT void flutter_recorder_stop();
FFI_PLUGIN_EXPORT void flutter_recorder_startStreamingData();
FFI_PLUGIN_EXPORT void flutter_recorder_stopStreamingData();
FFI_PLUGIN_EXPORT void flutter_recorder_setSilenceDetection(bool enable);
FFI_PLUGIN_EXPORT void
flutter_recorder_setSilenceThresholdDb(float silenceThresholdDb);
FFI_PLUGIN_EXPORT void
flutter_recorder_setSilenceDuration(float silenceDuration);
FFI_PLUGIN_EXPORT void flutter_recorder_setSecondsOfAudioToWriteBefore(
    float secondsOfAudioToWriteBefore);
FFI_PLUGIN_EXPORT enum CaptureErrors
flutter_recorder_startRecording(const char *path);