lib/src/bindings/flutter_recorder_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_recorder.h`.
///
/// Regenerate bindings with
/// `dart run ffigen --config ffigen.yaml`
/// or
/// `export CPATH="$(clang -v 2>&1 | grep "Selected GCC installation" | rev | cut -d' ' -f1 | rev)/include";  dart run ffigen --config ffigen.yaml`
///
class FlutterRecorderBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterRecorderBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterRecorderBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void flutter_recorder_createWorkerInWasm() {
    return _flutter_recorder_createWorkerInWasm();
  }

  late final _flutter_recorder_createWorkerInWasmPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_createWorkerInWasm');
  late final _flutter_recorder_createWorkerInWasm =
      _flutter_recorder_createWorkerInWasmPtr.asFunction<void Function()>();

  void flutter_recorder_setDartEventCallback(
    dartSilenceChangedCallback_t silence_changed_callback,
    dartStreamDataCallback_t stream_data_callback,
  ) {
    return _flutter_recorder_setDartEventCallback(
      silence_changed_callback,
      stream_data_callback,
    );
  }

  late final _flutter_recorder_setDartEventCallbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  dartSilenceChangedCallback_t, dartStreamDataCallback_t)>>(
      'flutter_recorder_setDartEventCallback');
  late final _flutter_recorder_setDartEventCallback =
      _flutter_recorder_setDartEventCallbackPtr.asFunction<
          void Function(
              dartSilenceChangedCallback_t, dartStreamDataCallback_t)>();

  void flutter_recorder_setRecordingStoppedCallback(
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>> callback,
  ) {
    return _flutter_recorder_setRecordingStoppedCallback(callback);
  }

  late final _flutter_recorder_setRecordingStoppedCallbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>>)>>(
      'flutter_recorder_setRecordingStoppedCallback');
  late final _flutter_recorder_setRecordingStoppedCallback =
      _flutter_recorder_setRecordingStoppedCallbackPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>>)>();

  void flutter_recorder_setRecordingStartedCallback(
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>> callback,
  ) {
    return _flutter_recorder_setRecordingStartedCallback(callback);
  }

  late final _flutter_recorder_setRecordingStartedCallbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>>)>>(
      'flutter_recorder_setRecordingStartedCallback');
  late final _flutter_recorder_setRecordingStartedCallback =
      _flutter_recorder_setRecordingStartedCallbackPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>)>>)>();

  void flutter_recorder_nativeFree(
    ffi.Pointer<ffi.Void> pointer,
  ) {
    return _flutter_recorder_nativeFree(
      pointer,
    );
  }

  late final _flutter_recorder_nativeFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'flutter_recorder_nativeFree');
  late final _flutter_recorder_nativeFree = _flutter_recorder_nativeFreePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void flutter_recorder_listCaptureDevices(
    ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
    ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
    ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
    ffi.Pointer<ffi.Int> n_devices,
  ) {
    return _flutter_recorder_listCaptureDevices(
      devicesName,
      deviceId,
      isDefault,
      n_devices,
    );
  }

  late final _flutter_recorder_listCaptureDevicesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Int>)>>('flutter_recorder_listCaptureDevices');
  late final _flutter_recorder_listCaptureDevices =
      _flutter_recorder_listCaptureDevicesPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Int>)>();

  void flutter_recorder_freeListCaptureDevices(
    ffi.Pointer<ffi.Pointer<ffi.Char>> devicesName,
    ffi.Pointer<ffi.Pointer<ffi.Int>> deviceId,
    ffi.Pointer<ffi.Pointer<ffi.Int>> isDefault,
    int n_devices,
  ) {
    return _flutter_recorder_freeListCaptureDevices(
      devicesName,
      deviceId,
      isDefault,
      n_devices,
    );
  }

  late final _flutter_recorder_freeListCaptureDevicesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Int)>>('flutter_recorder_freeListCaptureDevices');
  late final _flutter_recorder_freeListCaptureDevices =
      _flutter_recorder_freeListCaptureDevicesPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              int)>();

  CaptureErrors flutter_recorder_init(
    int deviceID,
    int pcmFormat,
    int sampleRate,
    int channels,
    int captureOnly,
  ) {
    return CaptureErrors.fromValue(_flutter_recorder_init(
      deviceID,
      pcmFormat,
      sampleRate,
      channels,
      captureOnly,
    ));
  }

  late final _flutter_recorder_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Int, ffi.Int, ffi.UnsignedInt,
              ffi.UnsignedInt, ffi.Int)>>('flutter_recorder_init');
  late final _flutter_recorder_init = _flutter_recorder_initPtr
      .asFunction<int Function(int, int, int, int, int)>();

  void flutter_recorder_deinit() {
    return _flutter_recorder_deinit();
  }

  late final _flutter_recorder_deinitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_deinit');
  late final _flutter_recorder_deinit =
      _flutter_recorder_deinitPtr.asFunction<void Function()>();

  int flutter_recorder_isInited() {
    return _flutter_recorder_isInited();
  }

  late final _flutter_recorder_isInitedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_isInited');
  late final _flutter_recorder_isInited =
      _flutter_recorder_isInitedPtr.asFunction<int Function()>();

  int flutter_recorder_isDeviceStarted() {
    return _flutter_recorder_isDeviceStarted();
  }

  late final _flutter_recorder_isDeviceStartedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_isDeviceStarted');
  late final _flutter_recorder_isDeviceStarted =
      _flutter_recorder_isDeviceStartedPtr.asFunction<int Function()>();

  CaptureErrors flutter_recorder_start() {
    return CaptureErrors.fromValue(_flutter_recorder_start());
  }

  late final _flutter_recorder_startPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
          'flutter_recorder_start');
  late final _flutter_recorder_start =
      _flutter_recorder_startPtr.asFunction<int Function()>();

  void flutter_recorder_stop() {
    return _flutter_recorder_stop();
  }

  late final _flutter_recorder_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('flutter_recorder_stop');
  late final _flutter_recorder_stop =
      _flutter_recorder_stopPtr.asFunction<void Function()>();

  void flutter_recorder_startStreamingData() {
    return _flutter_recorder_startStreamingData();
  }

  late final _flutter_recorder_startStreamingDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_startStreamingData');
  late final _flutter_recorder_startStreamingData =
      _flutter_recorder_startStreamingDataPtr.asFunction<void Function()>();

  void flutter_recorder_stopStreamingData() {
    return _flutter_recorder_stopStreamingData();
  }

  late final _flutter_recorder_stopStreamingDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_stopStreamingData');
  late final _flutter_recorder_stopStreamingData =
      _flutter_recorder_stopStreamingDataPtr.asFunction<void Function()>();

  void flutter_recorder_setSilenceDetection(
    bool enable,
  ) {
    return _flutter_recorder_setSilenceDetection(
      enable,
    );
  }

  late final _flutter_recorder_setSilenceDetectionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'flutter_recorder_setSilenceDetection');
  late final _flutter_recorder_setSilenceDetection =
      _flutter_recorder_setSilenceDetectionPtr
          .asFunction<void Function(bool)>();

  void flutter_recorder_setSilenceThresholdDb(
    double silenceThresholdDb,
  ) {
    return _flutter_recorder_setSilenceThresholdDb(
      silenceThresholdDb,
    );
  }

  late final _flutter_recorder_setSilenceThresholdDbPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_setSilenceThresholdDb');
  late final _flutter_recorder_setSilenceThresholdDb =
      _flutter_recorder_setSilenceThresholdDbPtr
          .asFunction<void Function(double)>();

  void flutter_recorder_setSilenceDuration(
    double silenceDuration,
  ) {
    return _flutter_recorder_setSilenceDuration(
      silenceDuration,
    );
  }

  late final _flutter_recorder_setSilenceDurationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_setSilenceDuration');
  late final _flutter_recorder_setSilenceDuration =
      _flutter_recorder_setSilenceDurationPtr
          .asFunction<void Function(double)>();

  void flutter_recorder_setSecondsOfAudioToWriteBefore(
    double secondsOfAudioToWriteBefore,
  ) {
    return _flutter_recorder_setSecondsOfAudioToWriteBefore(
      secondsOfAudioToWriteBefore,
    );
  }

  late final _flutter_recorder_setSecondsOfAudioToWriteBeforePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_setSecondsOfAudioToWriteBefore');
  late final _flutter_recorder_setSecondsOfAudioToWriteBefore =
      _flutter_recorder_setSecondsOfAudioToWriteBeforePtr
          .asFunction<void Function(double)>();

  CaptureErrors flutter_recorder_startRecording(
    ffi.Pointer<ffi.Char> path,
  ) {
    return CaptureErrors.fromValue(_flutter_recorder_startRecording(
      path,
    ));
  }

  late final _flutter_recorder_startRecordingPtr = _lookup<
          ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ffi.Char>)>>(
      'flutter_recorder_startRecording');
  late final _flutter_recorder_startRecording =
      _flutter_recorder_startRecordingPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();
